--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</section>
 				<section>
 					<h3>LinkedIn</h3>
-					<p><a href="https://www.linkedin.com">See my LinkedIn</a></p>
+					<p><a href="https://www.linkedin.com/in/mateo-cuba-2b21b2365/">See my LinkedIn</a></p>
 				</section>
 			</section>
 		</footer>
