--- a/contact.html
+++ b/contact.html
@@ -73,9 +73,11 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<div id="copyright">
-					<ul><li>&copy; Mateo Cuba</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-				</div>
+				<section id="future-section">
+				</section>
+
+
+				</section>
 			</footer>
 
 		</div>
