--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
 		<!-- Intro -->
 		<div id="intro">
-			<h1>Welcome to My Portfolio</h1>
-			<p>Hi, I’m <strong>Mateo Cuba</strong>, a Computer Systems Technician - Networking student passionate about IT infrastructure, systems, and networking. This portfolio showcases my projects, experience, and skills.</p>
+			<h1>Welcome to My <br /> 
+				Portfolio Website</h1>
+			<p>Hi, I’m <strong>Mateo Cuba</strong>, a Computer Systems Technician - Networking student passionate about technology. <br />
+				Scroll down to explore my projects, skills, and professional experience.</p>
 			<ul class="actions">
 				<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
@@ -64,13 +66,16 @@
 					<h2>About Me</h2>
 				</header>
 				<p>
-					I’m a motivated IT student with hands-on experience in networking, systems administration, and technical support. 
-					My goal is to apply my skills in real-world environments, continuously learn, and contribute to building secure and efficient IT solutions.
+					IT student with hands-on experience in Windows/Linux systems, Active Directory, 
+					Azure, and network configuration (DNS/DHCP, routing, switching) through labs, 
+					projects, and professional IT Help Desk Support. Skilled in troubleshooting, 
+					system administration, and customer service, with strong problem-solving and 
+					communication abilities.
 				</p>
 
 				<h3>Key Skills</h3>
 				<ul>
-					<li><strong>Systems Administration:</strong> Active Directory, Group Policy, Microsoft Exchange, Microsoft Azure</li>
+					<li><strong>Systems Administration:</strong> Active Directory, Group Policy, Microsoft Exchange, Microsoft Azure, PowerShell and Bash Scripting</li>
 					<li><strong>IT Support:</strong> Hardware/software troubleshooting, device provisioning, ticketing systems</li>
 					<li><strong>Networking:</strong> Advanced router/switch configuration, DNS, DHCP, Wireshark</li>
 					<li><strong>Operating Systems:</strong> Windows Server, Linux administration</li>
@@ -82,21 +87,15 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<section class="split contact">
-				<section>
-					<h3>Email</h3>
-					<p><a href="mailto:mateocuba07@gmail.com">mateocuba07@gmail.com</a></p>
-				</section>
-				<section>
-					<h3>LinkedIn</h3>
-					<p><a href="https://www.linkedin.com/in/mateo-cuba-2b21b2365/">See my LinkedIn</a></p>
-				</section>
+			<section id="future-section">
 			</section>
+
+
 		</footer>
 
 		<!-- Copyright -->
 		<div id="copyright">
-			<ul><li>&copy; 2025 Mateo Cuba</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+			<ul><li>&copy; 2025 Mateo Cuba</li><li>All Rights Reserved</a></li></ul>
 		</div>
 
 	</div>
