--- a/projects.html
+++ b/projects.html
@@ -44,10 +44,7 @@
 					<li><a href="work.html">Work Experience</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
-				<ul class="icons">
-					<li><a href="https://github.com/yourgithub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://linkedin.com/in/yourlinkedin" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				</ul>
+
 			</nav>
 
 			<!-- Main -->
@@ -85,18 +82,10 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<section class="split contact">
-					<section>
-						<h3>Email</h3>
-						<p><a href="mailto:mateocuba07@gmail.com">mateocuba07@gmail.com</a></p>
-					</section>
-					<section>
-						<h3>Social</h3>
-						<ul class="icons alt">
-							<li><a href="https://github.com/yourgithub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://linkedin.com/in/yourlinkedin" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						</ul>
-					</section>
+				<section id="future-section">
+				</section>
+
+
 				</section>
 			</footer>
 
