--- a/work.html
+++ b/work.html
@@ -57,12 +57,12 @@
 						<p>As an IT Help Desk Co-op Student, I provided technical support to staff across the organization, assisting with hardware, software, and account-related issues in a fast-paced environment. My role emphasized both technical troubleshooting and strong communication skills to deliver effective solutions.</p>
 
 						<ul>
-							<li>Provisioned and configured desktops, laptops, mobile devices (Windows, macOS, iOS, Android), and peripherals for new users.</li>
+							<li><strong>Provisioned</strong> and <strong>configured</strong> desktops, laptops, mobile devices (Windows, macOS, iOS, Android), and peripherals for new users.</li>
 							<li>Assisted with user account management in <strong>Active Directory</strong>, ensuring proper access and security controls.</li>
-							<li>Troubleshot PC hardware, operating system issues, and application errors within a domain network environment.</li>
-							<li>Supported wireless telecom devices, printers, and low-voltage systems such as access control and intercoms.</li>
-							<li>Helped maintain IT asset inventory, ensuring accurate tracking of devices and peripherals.</li>
-							<li>Delivered excellent customer service by providing clear, patient, and timely support to staff.</li>
+							<li><strong>Troubleshot</strong> PC hardware, operating system issues, and application errors within a domain network environment.</li>
+							<li><strong>Supported</strong> wireless telecom devices, printers, and low-voltage systems such as access control and intercoms.</li>
+							<li>Helped <strong>maintain IT asset inventory</strong>, ensuring accurate tracking of devices and peripherals.</li>
+							<li>Delivered <strong>excellent customer service</strong> by providing clear, patient, and timely support to staff.</li>
 						</ul>
 
 						<p><strong>Key Skills Used:</strong> Windows OS troubleshooting, Active Directory, device provisioning, hardware/software repair, inventory management, customer service, problem-solving, teamwork.</p>
@@ -74,9 +74,11 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<div id="copyright">
-					<ul><li>&copy; Mateo Cuba</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-				</div>
+				<section id="future-section">
+				</section>
+
+
+				</section>
 			</footer>
 
 		</div>
