--- a/projects.html
+++ b/projects.html
@@ -83,9 +83,9 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<section id="future-section">
-				</section>
-
-
+					<header class="major" style="text-align: center; margin-top: 40px;">
+						<h2>More to come...</h2>
+					</header>
 				</section>
 			</footer>
 
